update index.html for viewing

--- a/nyt_top_terms/visuals/index.html
+++ b/nyt_top_terms/visuals/index.html
@@ -6,7 +6,7 @@
 			<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 		<script> 
     		$(function(){
-      			$("#container").load("div.html"); 
+      			$("#container").load("plot.html"); 
     		});
     		</script> 
 
